--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="fixed-top mb-5">
+    <header>
         
         <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
@@ -25,7 +25,7 @@
     </header>
 
     <main class="d-flex ">
-        <aside class="sidebar mt-5">
+        <aside class="sidebar">
             <div class="sidebar-top">
                 <nav class="sidebar-list">
                     <ul>
