--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
 
 
-        <div class="first-table mt-2 px-3 d-flex">
+        <div class="first-table mt-2 px-3 d-flex ">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
@@ -209,7 +209,7 @@
                             
                           </div>
 
-                          <div class="card">
+                          <div class="card mt-3">
                             <h5 class="card-header">F.A.Q</h5>
                             <div class="card-body">
                                 <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -249,7 +249,7 @@
 
                     </div>
 
-                    <div class="col-lg-4 mt-lg-0 mt-md-2 mt-sm-2 ">
+                    <div class="col-lg-4 mt-lg-0 mt-md-3 mt-sm-3 ">
                 <div class="card">
                     <div class="card-header">
                       <h4>Todo</h4>
@@ -270,7 +270,7 @@
                       </ul>
                     
                   </div>
-                  <div class="card mt-lg-0 mt-md-2 mt-sm-2">
+                  <div class="card mt-lg-5 mt-md-2 mt-sm-2">
                     <img src="./img/stats.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <ul class="list-group list-group-flush">
