--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
                 <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-magnifying-glass"></i></span>
                 <input type="text" class="form-control" placeholder="Prova a cercare: lezioni di Laravel" aria-label="Username" aria-describedby="addon-wrapping">
+                <div class="icons d-flex align-items-center">
+                    <i class="fa-solid fa-list-ul"></i>
+                    <i class="fa-solid fa-circle-question"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                    <i class="fa-solid fa-bell"></i>
+                </div>
               </div>
               
             </div>
