--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
                     <i class="fa-solid fa-list-ul"></i>
                     <i class="fa-solid fa-circle-question"></i>
                     <i class="fa-solid fa-ellipsis-vertical"></i>
-                    <i class="fa-solid fa-bell"></i>
+                    <div class="dropdown">
+                        <button class="border-0 bg-transparent text-warning" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fa-solid fa-bell"></i>
+
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                      </div>
                 </div>
               </div>
               
@@ -57,8 +67,21 @@
             <div class="main-start d-flex">
 
                 <div class="start-list text-white">
-                    <h2 class="px">Boolean</h2>
-                    <span class="badge rounded-pill text-sm">Primary</span>
+                    <h2 class="d-inline-block">Boolean</h2> <span class="badge rounded-pill">Piano blaze</span>
+                    <nav style="--bs-breadcrumb-divider: '>>';" aria-label="breadcrumb">
+                        <ol class="breadcrumb flex-nowrap">
+                          <li class="breadcrumb-item">
+                            <span>3 app</span>
+                          </li>
+
+                          <li class="breadcrumb-item">
+                            <span>Boolean mobile app</span>
+                            <span>Boolean web app</span>
+                            <span>Boolean blog app</span>
+                          </li>
+
+                        </ol>
+                      </nav>
                 </div>
 
                 <div class="active-students text-white text-center">
